Added Windows App SDK

--- a/windows-app-sdk/windows-app-sdk.nuspec
+++ b/windows-app-sdk/windows-app-sdk.nuspec
@@ -12,7 +12,7 @@
     <owners>tom-muah, bookking3000</owners>
 
     <title>windows-app-sdk (Install)</title>
-    <authors>microsoft corporation</authors>
+    <authors>Microsoft Corporation</authors>
     <projectUrl>https://https://learn.microsoft.com/de-de/windows/apps/windows-app-sdk/downloads</projectUrl>
 
     <copyright>2024 Microsoft Corporation</copyright>
