--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,14 +8,10 @@ on:
     - cron:  '0 0 * * *'
   workflow_dispatch:
 
-defaults:
-  run:
-    shell: pwsh
-
 jobs:
   update_choco_auto:
     name: update_${{ matrix.package }}
-    runs-on: windows-latest
+    runs-on: windows-2019
 
     strategy:
       max-parallel: 1
