--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       matrix:
         package: [
          linkus-desktop-client,
-         #yealink-usb-connect,
+         yealink-usb-connect,
         ]
 
     steps:
