--- a/3cx-client/3cx-client.nuspec
+++ b/3cx-client/3cx-client.nuspec
@@ -15,7 +15,7 @@
     <tags>3cx-client pbx 3cx</tags>
     <summary>3cx desktop application for Windows</summary>
     <description>
-    The 3CX Softphone notifies users in real-time of incoming calls and enables easy call management from their desktop. Users can set their status, view CRM & phonebook entries as well as access their BLF panel for fast calling. 
+    The 3CX Softphone notifies users in real-time of incoming calls and enables easy call management from their desktop. Users can set their status, view CRM &amp; phonebook entries as well as access their BLF panel for fast calling. 
 
     Getting Started:
 
